<resources>
    <string name="app_name">DigitalLeashParent</string>
    <string name="btnUpdate">Update</string>
    <string name="txtViewParentLoc">Parent Location</string>
    <string name="txtViewParentUserName">Parent Username</string>
    <string name="txtViewRadius">Radius (mi)</string>
    <string name="btnSave">Save Settings</string>
    <string name="btnAdd">Add Child</string>
    <string name="txtViewChildren"></string>
    <string name="txtViewParentLat">Latitude</string>
    <string name="txtViewParentLong">Longitude</string>
    <string name="editTextParentUserName">Parent Username</string>
    <string name="editTextRadius">Radius</string>
    <string name="editTextAddChild">Child Name</string>
    <string name="btnRedActBack">Back</string>
    <string name="btnGreenActBack">Back</string>

</resources>


